* Sort of reverted the responsive menus I implemented earlier this year. Instead of moving menus to the sidebar automatically, which was a neat trick, I went for usability and left them where they are, instead developing all sub-menus below their parents, rather than on their side. Scrolling on mobile devices isn't an issue. The CSS bandwidth use remains approximately the same. (script.js, index.css, sections.css)
@ Just for the record... This change is made possible by the fact that I moved all menu entries below the 'Home' menu item. I know that many of you wondered why I did this in the first place, well, that was for that. I just didn't take the time to finish this back then.

! Okaaaay, here's hoping I won't break anything by hiding #wedge overflows... Doing this is a media query is pretty much the only way to ensure it 'works' on mobile devices and doesn't annoy the rest of us. (sections.css, Wilderless/extra.css, Wireless/extra.css)

--- a/core/skins/index.css
+++ b/core/skins/index.css
@@ -1104,25 +1104,6 @@ li.nodrop h4:after mixes .hide
 			color: #fff
 @endif
 
-#sidemenu mixes .hide
-	border-bottom: 1px solid #ccc
-	margin: 0 0 10px
-	padding: 0 0 10px
-	h4 mixes .inline-block
-		font-size: 1.4em
-		line-height: 1.6em
-		padding: 0 6px
-		font-weight: 400
-	ul
-		display: block
-		margin: 0
-		padding: 0 0 0 20px
-	li
-		padding: 4px 8px
-		margin: 0
-		display: block
-		font-size: 1.1em
-
 /* Styles for the mini-menus.
 ---------------------------------------------------- */
 
